Bug #47444
crash in FSMap::parse_role
% Done:
0%
Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Component(FS):
Labels (FS):
Pull request ID:
Crash signature:
Description
2020-09-14T10:15:42.209 INFO:tasks.workunit.client.0.smithi109.stderr:/home/ubuntu/cephtest/clone.client.0/qa/workunits/cephtool/test.sh:989: test_mon_mds: ceph mds rmfailed 0 --yes-i-really-mean-it 2020-09-14T10:15:42.528 INFO:tasks.ceph.mon.a.smithi109.stderr:terminate called after throwing an instance of 'std::out_of_range' 2020-09-14T10:15:42.529 INFO:tasks.ceph.mon.a.smithi109.stderr: what(): map::at 2020-09-14T10:15:42.529 INFO:tasks.ceph.mon.a.smithi109.stderr:*** Caught signal (Aborted) ** 2020-09-14T10:15:42.529 INFO:tasks.ceph.mon.a.smithi109.stderr: in thread 7fd546641700 thread_name:ms_dispatch 2020-09-14T10:15:42.531 INFO:tasks.ceph.mon.a.smithi109.stderr: ceph version 16.0.0-5490-ga2cc67f563e (a2cc67f563e4552589b0c94e8deed512dafecf70) pacific (dev) 2020-09-14T10:15:42.531 INFO:tasks.ceph.mon.a.smithi109.stderr: 1: (()+0x12dc0) [0x7fd551a20dc0] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 2: (gsignal()+0x10f) [0x7fd5506fb8df] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 3: (abort()+0x127) [0x7fd5506e5cf5] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 4: (()+0x9006b) [0x7fd5510b106b] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 5: (()+0x964cc) [0x7fd5510b74cc] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 6: (()+0x96527) [0x7fd5510b7527] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 7: (()+0x96788) [0x7fd5510b7788] 2020-09-14T10:15:42.532 INFO:tasks.ceph.mon.a.smithi109.stderr: 8: (()+0x9200f) [0x7fd5510b300f] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 9: (FSMap::parse_role(std::basic_string_view<char, std::char_traits<char> >, mds_role_t*, std::ostream&, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > const&) const+0x14f) [0x7fd55444cd3f] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 10: (MDSMonitor::filesystem_command(FSMap&, boost::intrusive_ptr<MonOpRequest>, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<void>, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > > const&, std::__cxx11::basic_stringstream<char, std::char_traits<char>, std::allocator<char> >&)+0x8fd) [0x55ff627f1d1d] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 11: (MDSMonitor::prepare_command(boost::intrusive_ptr<MonOpRequest>)+0x24b) [0x55ff627f33eb] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 12: (MDSMonitor::prepare_update(boost::intrusive_ptr<MonOpRequest>)+0x153) [0x55ff627f3ff3] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 13: (PaxosService::dispatch(boost::intrusive_ptr<MonOpRequest>)+0xa6d) [0x55ff627237fd] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 14: (Monitor::handle_command(boost::intrusive_ptr<MonOpRequest>)+0x5af3) [0x55ff62623f33] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 15: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0x865) [0x55ff626255f5] 2020-09-14T10:15:42.533 INFO:tasks.ceph.mon.a.smithi109.stderr: 16: (Monitor::_ms_dispatch(Message*)+0x69d) [0x55ff6262695d] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 17: (Monitor::handle_forward(boost::intrusive_ptr<MonOpRequest>)+0x941) [0x55ff62628621] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 18: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0xddb) [0x55ff62625b6b] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 19: (Monitor::_ms_dispatch(Message*)+0x69d) [0x55ff6262695d] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 20: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x5c) [0x55ff62653c5c] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 21: (DispatchQueue::entry()+0x126a) [0x7fd554143e5a] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 22: (DispatchQueue::DispatchThread::entry()+0x11) [0x7fd5541f2ae1] 2020-09-14T10:15:42.534 INFO:tasks.ceph.mon.a.smithi109.stderr: 23: (()+0x82de) [0x7fd551a162de] 2020-09-14T10:15:42.535 INFO:tasks.ceph.mon.a.smithi109.stderr: 24: (clone()+0x43) [0x7fd5507c0133]
/a/teuthology-2020-09-14_07:01:01-rados-master-distro-basic-smithi/5434134
Causing multiple failures in the latest rados run: https://pulpito.ceph.com/teuthology-2020-09-14_07:01:01-rados-master-distro-basic-smithi/
History
#1 Updated by Patrick Donnelly 4 months ago
- Status changed from New to In Progress
- Assignee set to Patrick Donnelly
- Target version set to v16.0.0
- Source set to Q/A
#3 Updated by Ramana Raja 4 months ago
- Pull request ID changed from 47444 to 37147
#4 Updated by Patrick Donnelly 4 months ago
- Status changed from Fix Under Review to Resolved